Add F19 to manual

--- a/doc/snana_manual.bib
+++ b/doc/snana_manual.bib
@@ -477,4 +477,44 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Fitzpatrick2019,
+       author = {{Fitzpatrick}, E.~L. and others},
+        title = "{An Analysis of the Shapes of Interstellar Extinction Curves. VII. Milky Way Spectrophotometric Optical-through-ultraviolet Extinction and Its R-dependence}",
+      journal = apj,
+     keywords = {Interstellar dust, Interstellar dust extinction, Interstellar dust processes, Interstellar absorption, Interstellar reddening, Interstellar scattering, 836, 837, 838, 831, 853, 854, Astrophysics - Astrophysics of Galaxies, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2019,
+        month = dec,
+       volume = {886},
+       number = {2},
+          eid = {108},
+        pages = {108},
+          doi = {10.3847/1538-4357/ab4c3a},
+archivePrefix = {arXiv},
+       eprint = {1910.08852},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019ApJ...886..108F},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Schlafly_11,
+       author = {{Schlafly}, E.~F. and {Finkbeiner}, D.~P.},
+        title = "{Measuring Reddening with Sloan Digital Sky Survey Stellar Spectra and Recalibrating SFD}",
+      journal = apj,
+     keywords = {dust, extinction, Galaxy: stellar content, ISM: clouds, Astrophysics - Galaxy Astrophysics},
+         year = 2011,
+        month = aug,
+       volume = {737},
+       number = {2},
+          eid = {103},
+        pages = {103},
+          doi = {10.1088/0004-637X/737/2/103},
+archivePrefix = {arXiv},
+       eprint = {1012.4804},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2011ApJ...737..103S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 
