--- a/doc/snana_manual.bib
+++ b/doc/snana_manual.bib
@@ -515,6 +515,95 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{MaizApellaniz2014,
+       author = {{Ma{\'\i}z Apell{\'a}niz}, J. and others},
+        title = "{The VLT-FLAMES Tarantula Survey. XVI. The optical and NIR extinction laws in 30 Doradus and the photometric determination of the effective temperatures of OB stars}",
+      journal = aap,
+     keywords = {open clusters and associations: individual: 30 Doradus, dust, extinction, Magellanic Clouds, stars: early-type, stars: fundamental parameters, Astrophysics - Astrophysics of Galaxies, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2014,
+        month = apr,
+       volume = {564},
+          eid = {A63},
+        pages = {A63},
+          doi = {10.1051/0004-6361/201423439},
+archivePrefix = {arXiv},
+       eprint = {1402.3062},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2014A&A...564A..63M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Goobar2008,
+       author = {{Goobar}, A.},
+        title = "{Low R$_{V}$ from Circumstellar Dust around Supernovae}",
+      journal = apj,
+     keywords = {dust, extinction, supernovae: general, Astrophysics},
+         year = 2008,
+        month = oct,
+       volume = {686},
+       number = {2},
+        pages = {L103-L106},
+          doi = {10.1086/593060},
+archivePrefix = {arXiv},
+       eprint = {0809.1094},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2008ApJ...686L.103G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Amanullah2015,
+       author = {{Amanullah}, R. and others},
+        title = "{Diversity in extinction laws of Type Ia supernovae measured between 0.2 and 2 {\ensuremath{\mu}}m}",
+      journal = {MNRAS},
+     keywords = {circumstellar matter, supernovae: general, supernovae: individual: SNe 2012cg, supernovae: individual: 2012cu, dust, extinction, Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2015,
+        month = nov,
+       volume = {453},
+       number = {3},
+        pages = {3300-3328},
+          doi = {10.1093/mnras/stv1505},
+archivePrefix = {arXiv},
+       eprint = {1504.02101},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2015MNRAS.453.3300A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Draine2003,
+       author = {{Draine}, B.~T.},
+        title = "{Scattering by Interstellar Dust Grains. I. Optical and Ultraviolet}",
+      journal = apj,
+     keywords = {ISM: Dust, Extinction, Polarization, Scattering, Ultraviolet: ISM, Astrophysics},
+         year = 2003,
+        month = dec,
+       volume = {598},
+       number = {2},
+        pages = {1017-1025},
+          doi = {10.1086/379118},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0304060},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2003ApJ...598.1017D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Weingartner2001,
+       author = {{Weingartner}, J.~C. and {Draine}, B.~T.},
+        title = "{Dust Grain-Size Distributions and Extinction in the Milky Way, Large Magellanic Cloud, and Small Magellanic Cloud}",
+      journal = apj,
+     keywords = {ISM: Dust, Extinction, ISM: Clouds, Astrophysics},
+         year = 2001,
+        month = feb,
+       volume = {548},
+       number = {1},
+        pages = {296-309},
+          doi = {10.1086/318651},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0008146},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2001ApJ...548..296W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
 
 
