Fixing refs and recompiling after merge conflict

--- a/doc/snana_manual.bib
+++ b/doc/snana_manual.bib
@@ -606,7 +606,7 @@ archivePrefix = {arXiv},
 }
 
 @ARTICLE{Mandel2022,
-       author = {{Mandel}, Kaisey S. and {Thorp}, Stephen and {Narayan}, Gautham and {Friedman}, Andrew S. and {Avelino}, Arturo},
+       author = {{Mandel}, K.~S. and others},
         title = "{A hierarchical Bayesian SED model for Type Ia supernovae in the optical to near-infrared}",
       journal = {MNRAS},
      keywords = {methods: statistical, transients: supernovae, distance scale, Astrophysics - Cosmology and Nongalactic Astrophysics, Statistics - Applications},
@@ -624,7 +624,7 @@ archivePrefix = {arXiv},
 }
 
 @ARTICLE{Thorp2021,
-       author = {{Thorp}, Stephen and {Mandel}, Kaisey S. and {Jones}, David O. and {Ward}, Sam M. and {Narayan}, Gautham},
+       author = {{Thorp}, S. and others},
         title = "{Testing the consistency of dust laws in SN Ia host galaxies: a BAYESN examination of Foundation DR1}",
       journal = {MNRAS},
      keywords = {methods: statistical, supernovae: general, dust, extinction, distance scale, Astrophysics - Astrophysics of Galaxies, Astrophysics - Cosmology and Nongalactic Astrophysics},
@@ -642,7 +642,7 @@ archivePrefix = {arXiv},
 }
 
 @ARTICLE{Grayling2024,
-       author = {{Grayling}, Matthew and {Thorp}, Stephen and {Mandel}, Kaisey S. and {Dhawan}, Suhail and {Uzsoy}, Ana Sofia M. and {Boyd}, Benjamin M. and {Hayes}, Erin E. and {Ward}, Sam M.},
+       author = {{Grayling}, M. and others},
         title = "{Scalable hierarchical BayeSN inference: investigating dependence of SN Ia host galaxy dust properties on stellar mass and redshift}",
       journal = {MNRAS},
      keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Astrophysics of Galaxies},
