add feature "SEARCHEFF_SPEC_FILE: ONE"

--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -3202,6 +3202,8 @@ An example is shown here,
   SEARCHEFF_SPEC_SCALE: 0.8  # default=1.0
        or
   SEARCHEFF_SPEC_FILE:  ZERO  # force EFF_SPEC=0 without map
+       or
+  SEARCHEFF_SPEC_FILE:  ONE   # force EFF_SPEC=1 without map
 \end{verbatim}
 % $
 %illustrating both the format and the default location.
