OPT_REFORMAT_SPECTRA=4 writes keyed format for plot_table.py

--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -14428,6 +14428,7 @@ Additional reformat options can be specified using {\tt SNLCINP} input mask
     # input to spectroscopic analyzer for redshifts or classification
     OPT_REFORMAT_SPECTRA = 1 ! 3-column text file: lam Flam Flamerr
     OPT_REFORMAT_SPECTRA = 2 ! write FLUX instead of FLam for astrodash
+    OPT_REFORMAT_SPECTRA = 4 ! write SNANA-keyed format for plot_table.py
 \end{verbatim}
 %
 Here is an example command to convert a simulation into a data-like
