--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -10445,8 +10445,7 @@ it works for TEXT$\to$TEXT and FITS$\to$FITS.
 \subsection{Peculiar Velocity Corrections }
 \label{subsec:vpec}
 
-By default, the CMB redshifts are used for the Hubble diagram
-analysis. Although \snana\ has no explicit code to compute
+Although \snana\ has no explicit code to compute
 peculiar-velocity corrections ($\vpec$), such corrections
 can be made with external codes and be included in the data files
 with {\tt VPEC} and {\tt VPEC\_ERR} keys. The $\vpec$ values
@@ -10459,7 +10458,15 @@ CMB redshift,
 \end{verbatim}
 which is written to the output tables and used by the \snana\ program
 {\tt SALT2mu.exe}.
-
+A summary of the three redshift variables in the output table
+from {\tt snlc\_fit.exe}  are:
+\begin{itemize}
+   \itemsep0em 
+   \item {\bf {\tt zHEL}}: heliocentric redshift
+   \item {\bf {\tt zCMB}}: CMB-frame redshift, corrected from {\tt zHEL} using
+       these hard-wired parameters: \\ {\tt CMBapex\_l=264.031}, {\tt CMBapex\_b=48.253}, {\tt CMBapex\_v=369.82}.
+   \item {\bf {\tt zHD}}: {\tt zCMB} with $\vpec$ correction; use this quantity for Hubble diagram.
+\end{itemize}
 
 % -----------------------------------
 
