--- a/doc/snana_manual.bib
+++ b/doc/snana_manual.bib
@@ -659,5 +659,53 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Sommovigo2025,
+       author = {{Sommovigo}, L. and others},
+        title = "{Learning the Universe: physically-motivated priors for dust attenuation curves}",
+      journal = {pre-print},
+     keywords = {Astrophysics - Astrophysics of Galaxies, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2025,
+        month = feb,
+       volume = {arXiv},
+        pages = {2502.13240},
+          doi = {10.48550/arXiv.2502.13240},
+archivePrefix = {arXiv},
+       eprint = {2502.13240},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv250213240S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Li2008,
+       author = {{Li}, A. and others},
+        title = "{On Dust Extinction of Gamma-Ray Burst Host Galaxies}",
+      journal = apj,
+     keywords = {dust, extinction, gamma rays: bursts, Astrophysics},
+         year = 2008,
+        month = oct,
+       volume = {685},
+       number = {2},
+        pages = {1046-1051},
+          doi = {10.1086/591049},
+archivePrefix = {arXiv},
+       eprint = {0808.4115},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2008ApJ...685.1046L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Pei1992,
+       author = {{Pei}, Y.~C.},
+        title = "{Interstellar Dust from the Milky Way to the Magellanic Clouds}",
+      journal = apj,
+         year = 1992,
+        month = aug,
+       volume = {395},
+        pages = {130-139},
+          doi = {10.1086/171637},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1992ApJ...395..130P},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 
