--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -14523,12 +14523,6 @@ Additional reformat options can be specified using {\tt SNLCINP} input mask
     OPT_REFORMAT_FITS = 64  ! exclude private variables
     OPT_REFORMAT_FITS = 128 ! include spectra
     OPT_REFORMAT_FITS = 256 ! exclude SIM truth to look like real data
-
-    # options to re-write only the spectra (no photometry); e.g., to prepare
-    # input to spectroscopic analyzer for redshifts or classification
-    OPT_REFORMAT_SPECTRA = 1 ! 3-column text file: lam Flam Flamerr
-    OPT_REFORMAT_SPECTRA = 2 ! write FLUX instead of FLam for astrodash
-    OPT_REFORMAT_SPECTRA = 4 ! write 'lam Flam Flamerr' using keyed format for plot_table.py
 \end{verbatim}
 %
 Here is an example command to convert a simulation into a data-like
@@ -14557,11 +14551,41 @@ The output data folder contains no sim-truth which
 is useful for i) data challenges, and ii) test analysis codes
 to ensure they don't cheat using sim-truth.
 
-{\tt OPT\_REFORMAT\_FITS[TEXT]} applies to the entire event (header, photometry, spectra),
-while {\tt OPT\_REFORMAT\_SPECTRA} applies only to spectra with the goal of re-formatting
-for spectral-analysis codes. This spectral-reformat writes a single file per spectrum in 
-the cwd (i.e., does not create an output folder); the calling code should organize
-a folder structure.
+
+
+
+% --------------------------------------
+\clearpage
+  \subsubsection{Extract Spectra into TEXT Format}
+  \label{sss:extract_spectra}
+% --------------------------------------
+
+Below are spectral reformat options to re-write only the spectra (no photometry) 
+to text tables, which can be used for
+spectroscopic analyzer codes or plotting. 
+While there are no spectroscopic analysis codes in \SNANA,
+the \SNANA\ plot utility {\tt plot\_table.py} works on all output formats.
+Each option writes a single text file per spectrum in the cwd 
+(i.e., does not create an output folder); 
+the calling code should organize a folder structure.
+For simulations, {\tt SIM\_FLAM} is automatically appended as last column.
+
+\begin{verbatim}  
+    OPT_REFORMAT_SPECTRA = 1 ! 3-column text file: lam Flam Flamerr
+    OPT_REFORMAT_SPECTRA = 2 ! write FLUX instead of FLam for astrodash
+    OPT_REFORMAT_SPECTRA = 4 ! write 'lam Flam Flamerr' using keyed format
+\end{verbatim}
+
+
+Example to extract spectra for three CIDs:
+%
+\begin{verbatim}      
+snana.exe NOFILE \
+  VERSION_PHOTOMETRY    MYSURVEY+gemini_SNIa \
+  OPT_REFORMAT_SPECTRA  1   \
+  SNCID_LIST 8,14,25
+\end{verbatim}
+
 
 % --------------------------------------
   \clearpage
