--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -5527,8 +5527,8 @@ can be obtained with
      or
   DNDZ_ZEXP_REWGT:  -2.0             # dN/dz *= 1/z^2
      or
-  DNDZ_ZPOLY_REWGT: a0,a1,,,,aN      # dN/dz *= [N'th prder polynom]
-  DNDZ_ZPOLY_REWGT: a0 a1 a2 a3      # LEGACY dN/dz *= [3rd prder polynom]
+  DNDZ_ZPOLY_REWGT: a0,a1,,,,aN      # dN/dz *= [N'th order polynom of z]
+  DNDZ_Z1POLY_REWGT: a0,a1,,,,aN     # dN/dz *= [N'th order polynom of (1+z)] 
 \end{verbatim}
 %
 The ``{\tt FLAT}'' command results in a flat redshift distribution,
