fix NEP_RESET to use NGENEV_TOT instead of NGENLC_TOT

--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -7908,6 +7908,13 @@ with quick-command (\S\ref{sss:quick_commands})
 \end{verbatim}
 
 
+% --------------------------------------------
+   \subsection{Understanding {\tt NGENEV} and {\tt NGENLC} }
+   \label{ssec:NGEN}
+% --------------------------------------------
+
+.xyz
+
 % ##########################################
    \clearpage
    \section{The \snana\ Fitter:  \snfitter\ }
