--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -1424,6 +1424,7 @@ etc ...
   USE_SIMLIB_REDSHIFT: 1  # use redshift in header (if there)
   USE_SIMLIB_DISTANCE: 1  # use lumi-distance in header (invert to get zCMB)
   USE_SIMLIB_SPECTRA:  1  # use TAKE_SPECTRUM keys in header 
+  USE_SIMLIB_SPECTROGRAPH:  1  # use SPECTROGRAPH keys under each LIBID
   USE_SIMLIB_SALT2:    1  # use SALT2c & SALT2x1 keys in header
 
   SMEARFLAG_FLUX:    1  # apply Poisson noise to fluxes
