fix bug that set mubias=0 for CCprior events

--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -6761,7 +6761,7 @@ To use a command-line override to change the Gaussian function in the
 \newcommand{\Prewgt}{P_{\rm REWGT}}
 
 To simulate bias corrections, low-probability regions are difficult
-to population with adequate statistics for a reliable bias correction.
+to populate with adequate statistics for a reliable bias correction.
 The following sim-input enhances low-prob regions:
 \begin{verbatim}
    GENPDF_EXPON_REWGT:  <REWGT>
