Update the manual to reflect new BayeSN optmask bits

--- a/doc/snana_manual.bib
+++ b/doc/snana_manual.bib
@@ -707,5 +707,23 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Hsiao2007,
+       author = {{Hsiao}, E.~Y. and others},
+        title = "{K-Corrections and Spectral Templates of Type Ia Supernovae}",
+      journal = apj,
+     keywords = {Cosmology: Observations, Stars: Supernovae: General, Astrophysics},
+         year = 2007,
+        month = jul,
+       volume = {663},
+       number = {2},
+        pages = {1187-1200},
+          doi = {10.1086/518232},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0703529},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2007ApJ...663.1187H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 
